tests/error/type_match/base_case_tuple_mismatched_elem_count1.bz
// error: unable to match type '[i32, float64, str]' to '[i32, float64]'
// note: mismatched tuple element counts: 3 and 2
function test()
{
	let _: [i32, float64] = [i32, float64, str]();
}
